# screengpt

./: .gitmodules  .tmp-alma.html  index.html  package-lock.json  package.json
.claude/: settings.local.json
docs/: fancy-imagining-raven.md
nextchat/app/: constant.ts
nextchat/app/client/: api.ts
nextchat/app/components/: settings.tsx
nextchat/app/store/: access.ts
nextchat/app/utils/: stream.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  memory.rs  mod.rs  projects.rs  screenshot.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: ai_client.rs  embedding.rs  mod.rs
src/components/Chat/: ChatWindow.tsx  MessageInput.tsx  MessageList.tsx
src/components/FloatingBall/: FloatingBall.tsx
src/components/Projects/: ProjectSelector.tsx
src/components/Settings/: SettingsPanel.tsx
src/hooks/: useScreenshot.ts
src/lib/: tauri.ts
src/stores/: chatStore.ts  projectStore.ts  settingsStore.ts
src/types/: index.ts
