[package]
name = "screengpt"
version = "0.1.0"
description = "A lightweight macOS desktop AI assistant with screenshot and vision capabilities"
authors = ["ScreenGPT"]
edition = "2021"

[lib]
name = "screengpt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Screenshot capture
xcap = "0.8"
image = "0.25"

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client for AI API
reqwest = { version = "0.12", features = ["json"] }

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# Utilities
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
thiserror = "2"
once_cell = "1"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
