[package]
name = "screengpt"
version = "0.1.0"
description = "A lightweight macOS desktop AI assistant with screenshot and vision capabilities"
authors = ["ScreenGPT"]
edition = "2021"

[lib]
name = "screengpt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Screenshot capture
xcap = "0.8"
image = "0.25"

# Utilities
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
